<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F5F5F5"
    android:fillViewport="true"

    tools:context=".ui.uiData.addData">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="37dp"
        android:paddingEnd="20dp"
        android:paddingBottom="37dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="9dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/nama_barang" />

                    <EditText
                        android:id="@+id/editTextNamaBarang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/coklat_abu_abu"
                        android:background="@drawable/edit_text_bacground"
                        android:fontFamily="@font/poppins_semibold"
                        android:hint="@string/masukkan_nama_barang"
                        android:textSize="12sp" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/kode_barang" />

                    <EditText
                        android:id="@+id/editTextKodeBarang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/coklat_abu_abu"
                        android:background="@drawable/edit_text_bacground"
                        android:fontFamily="@font/poppins_semibold"
                        android:hint="@string/masukkan_kode_barang"
                        android:textSize="12sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/harga_barang" />

                    <EditText
                        android:id="@+id/editTextHargaBarang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bacground"
                        android:fontFamily="@font/poppins_semibold"
                        android:hint="@string/masukkan_harga_barang"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textColorHint="@color/coklat_abu_abu"

                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="9dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewBarang"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"

                        android:background="@color/coklat_abu_abu"
                        android:src="@drawable/baseline_image_24" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/buttonCamera"
                            style="@style/CustomButtonStyle"
                            android:layout_marginEnd="4dp"
                            android:text="@string/camera" />


                        <Button
                            android:id="@+id/buttonGallery"
                            style="@style/CustomButtonStyle"
                            android:layout_marginStart="4dp"
                            android:text="@string/gallery" />
                        />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/stok_barang" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/button_add_stok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/coklat_abu_abu"
                    app:icon="@drawable/baseline_add_24" />

                <EditText
                    android:id="@+id/edit_stok_barang"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/material_motion_duration_long_1"
                    android:background="@drawable/bacgorund_kotak"
                    android:fontFamily="@font/poppins_semibold"
                    android:hint="@string/stok"
                    android:textAlignment="center"
                    android:textSize="31sp"

                    />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/button_remove_stok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/coklat_abu_abu"
                    app:icon="@drawable/baseline_remove_24" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/warna" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewColorsEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/waktu" />

            <EditText
                android:id="@+id/edit_text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bacground"
                android:clickable="false"
                android:focusable="false"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/kategori" />

            <EditText
                android:id="@+id/edt_nama_toko"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textColorHint="@color/coklat_abu_abu"
                android:layout_height="wrap_content"
                android:text="@string/masukkan_nama_toko"
                android:background="@drawable/edit_text_bacground"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/ukuran" />

            <TextView
                android:id="@+id/edt_ukuran"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textColorHint="@color/coklat_abu_abu"
                android:background="@drawable/edit_text_bacground"
                android:fontFamily="@font/poppins_semibold"
                android:hint="@string/masukkan_ukuran"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/bottom_color"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/save"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    </FrameLayout>
</FrameLayout>

